# job-application-tracker

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/routes/: user.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: user.py
backend/migrations/: env.py
backend/migrations/versions/: 635761bf9402_.py  aaeebc5fe630_add_created_at.py  fc657fbca3dc_added_users_table.py
